# VyreAI-Core

./: README.md
src/: Cargo.toml  lib.rs  main.rs
src/ai/: mod.rs  neural_network.rs  pattern_recognition.rs
src/api/: handlers.rs  mod.rs  models.rs  routes.rs
src/services/: analytics.rs  chain.rs  market.rs  mod.rs
src/utils/: config.rs  loggers.rs  mod.rs
tests/: integration_tests.rs
